--- a/Index.html
+++ b/Index.html
@@ -4,28 +4,21 @@
    <head>
       <title>test</title>
       <link rel="stylesheet" type="text/css" href="Main.css">
+
+      <script src="Menu.js"></script>
    </head>
 
-   <body>
+   <body onload="GenMenu()">
 
       <div id="title_bar">
          <h1>My Page</h1>
       </div>
 
-      <nav id="navbar">
-         <ul>
-            <li><a href="Index.html">Home</a></li>
-            <li><a href="Projects.html">Projects</a></li>
-            <li><a href="https://www.github.com/Xenose?tab=repositories">Github</a></li>
-            <li>About</li>
-         </ul>
-      </nav>
+      <nav id="Menu"></nav>
       
       <main>
          <h1>test test</h1>
          <p>hello world</p>
-         
-
       </main>
    
    </body>
