--- a/Projects.html
+++ b/Projects.html
@@ -4,26 +4,17 @@
    <head>
       <title>test</title>
       <link rel="stylesheet" type="text/css" href="Main.css">
+      
+      <script src="Menu.js"></script>
    </head>
 
-   <body>
+   <body onload="GenMenu()">
 
       <div id="title_bar">
          <h1>Projects</h1>
       </div>
 
-      <nav id="navbar">
-         <ul>
-            <li><a href="Index.html">&#10148 Home</a></li>
-            <li><a href="Projects.html">&#10148 Projects</a></li>
-            <li><a href="https://www.github.com/Xenose?tab=repositories">&#10148 Github</a></li>
-            <li>&#10148 Mods</li>
-            <li>&#10148 About</li>
-            <li>&#10148 Contact</li>
-	    <li>&#10148 Skills</li>
-	    <li>&#10148 About Page</li>
-         </ul>
-      </nav>
+      <nav id="Menu"></nav>
       
       <main>
          <div class="post_content">
