modified:   Index.html 	modified:   Main.css 	modified:   Projects.html 	About.html 	Error.html 	FileIo.php 	Menu.js 	Nav.css 	Posts.js

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
    <head>
       <title>test</title>
       <link rel="stylesheet" type="text/css" href="Main.css">
+      <link rel="stylesheet" type="text/css" href="Nav.css">
 
       <script src="Menu.js"></script>
    </head>
@@ -12,6 +13,12 @@
 
       <div id="title_bar">
          <h1>My Page</h1>
+         
+         <ul id="LangSelect">
+            <li>ENG</li>
+            <li>JP</li>
+            <li>SWE</li>
+         </ul>
       </div>
 
       <nav id="Menu"></nav>
