--- a/Projects.html
+++ b/Projects.html
@@ -4,11 +4,13 @@
    <head>
       <title>test</title>
       <link rel="stylesheet" type="text/css" href="Main.css">
+      <link rel="stylesheet" type="text/css" href="Nav.css">
       
       <script src="Menu.js"></script>
+      <script src="Posts.js"></script>
    </head>
 
-   <body onload="GenMenu()">
+   <body onload="GenMenu(); GenratePosts('test')">
 
       <div id="title_bar">
          <h1>Projects</h1>
