--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,12 @@
    <head>
       <title>test</title>
       <link rel="stylesheet" type="text/css" href="Main.css">
+      <link rel="stylesheet" type="text/css" href="Nav.css">
 
       <script src="Menu.js"></script>
    </head>
 
    <body onload="GenMenu()">
-
       <div id="title_bar">
          <h1>My Page</h1>
       </div>
