--- a/Projects.html
+++ b/Projects.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" type="text/css" href="Main.css">
       <link rel="stylesheet" type="text/css" href="Nav.css">   
       <link rel="stylesheet" type="text/css" href="Posts.css">
-      
+
       <script src="Menu.js"></script>
       <script src="Posts.js"></script>
    </head>
@@ -50,12 +50,12 @@
 
          <!-- pos 3 -->
          <article class="post_content">
-            <h2>OpenGL 3D demo "アストロイド"</h2>
+            <h2>Zombie Mascar</h2>
 
             <div>
-
-               <iframe src="https://www.youtube.com/embed/mks011DF-o4?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-               </iframe>
+               <video controls>
+                  <source src="videos/astroid_wars.webm" type="video/webm">
+               </video>
                <p>this project was mayed in a day with c++ and sfml, 
                demonstating the<br>spreated axums threum</p>
             </div>
