--- a/Projects.html
+++ b/Projects.html
@@ -27,7 +27,7 @@
             <h2>Astroid Wars "アストロイド"</h2>
 
             <div>
-               <video controls>
+               <video poster="img/astroid_wars.png" controls preload="metadata">
                   <source src="videos/astroid_wars.webm" type="video/webm">
                </video>
                <p>this project was mayed in a day with c++ and sfml, 
@@ -40,7 +40,7 @@
             <h2>OpenGL 3D demo "アストロイド"</h2>
 
             <div>
-               <video controls>
+               <video controls preload="metadata">
                   <source src="videos/astroid_wars.webm" type="video/webm">
                </video>
                <p>this project was mayed in a day with c++ and sfml, 
@@ -53,11 +53,11 @@
             <h2>Zombie Mascar</h2>
 
             <div>
-               <video controls>
-                  <source src="videos/astroid_wars.webm" type="video/webm">
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
-               <p>this project was mayed in a day with c++ and sfml, 
-               demonstating the<br>spreated axums threum</p>
+               <p>Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
          </article>
 
