to much to fast

--- a/Projects.html
+++ b/Projects.html
@@ -3,7 +3,7 @@
 <html>
    <head>
       
-      <title>test</title>
+      <title>Projects</title>
       <link rel="stylesheet" type="text/css" href="Main.css">
       <link rel="stylesheet" type="text/css" href="Nav.css">   
       <link rel="stylesheet" type="text/css" href="Posts.css">
@@ -30,7 +30,12 @@
                <video poster="img/astroid_wars.png" controls preload="metadata">
                   <source src="videos/astroid_wars.webm" type="video/webm">
                </video>
-               <p>this project was mayed in a day with c++ and sfml, 
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br>
+                  &#10148 Linux<br><br>
+
+                  this project was mayed in a day with c++ and sfml, 
                demonstating the<br>spreated axums threum</p>
             </div>
          </article>
@@ -43,7 +48,29 @@
                <video controls preload="metadata">
                   <source src="videos/astroid_wars.webm" type="video/webm">
                </video>
-               <p>this project was mayed in a day with c++ and sfml, 
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br>
+                  &#10148 Linux<br><br>
+
+                  this project was mayed in a day with c++ and sfml, 
+               demonstating the<br>spreated axums threum</p>
+            </div>
+         </article>
+
+         <!-- pos 2 -->
+         <article class="post_content">
+            <h2>OpenGL 3D box rendering</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/astroid_wars.webm" type="video/webm">
+               </video>
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br><br>
+
+                  this project was mayed in a day with c++ and sfml, 
                demonstating the<br>spreated axums threum</p>
             </div>
          </article>
@@ -51,6 +78,128 @@
          <!-- pos 3 -->
          <article class="post_content">
             <h2>Zombie Mascar</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>
+                  <b>Supported</b><br>
+                  &#10148 Windows<br>
+                  &#10148 Android<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 3 -->
+         <article class="post_content">
+            <h2>Bomb Game</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br><br>
+                  
+                  Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 4 -->
+         <article class="post_content">
+            <h2>Change Runner 3D</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/changer_runner_3D.mp4" type="video/mp4">
+               </video>
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br>
+                  &#10148 Linux<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 5 -->
+         <article class="post_content">
+            <h2>Change Runner 2D</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 5 -->
+         <article class="post_content">
+            <h2>High school second year webpage</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 6 -->
+         <article class="post_content">
+            <h2>Mappy</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 7 -->
+         <article class="post_content">
+            <h2>Coin Flipper</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 8 -->
+         <article class="post_content">
+            <h2>Mario clone</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 9 -->
+         <article class="post_content">
+            <h2>Mario clone</h2>
 
             <div>
                <video controls preload="metadata">
