--- a/Error.html
+++ b/Error.html
@@ -14,8 +14,7 @@
          <h1>Projects</h1>
       </div>
 
-      <h2>I am sorry you, need to see this<br>
-         the page your looking for may be under construction</p>
+      <h2>Error 404</h2>
 
       <nav id="Menu"></nav>
    </body>
