--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 
 <html>
    <head>
-      <title>test</title>
+      <title>Main Page</title>
       <link rel="stylesheet" type="text/css" href="Main.css">
       <link rel="stylesheet" type="text/css" href="Nav.css">
 
