fixed video and text issues

--- a/Projects.html
+++ b/Projects.html
@@ -36,7 +36,11 @@
                   &#10148 Linux<br><br>
 
                   this project was mayed in a day with c++ and sfml, 
-               demonstating the<br>spreated axums threum</p>
+               demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
+               demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
+               demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
+               demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
+               demonstating the spreated axums threum</p>
             </div>
          </article>
 
@@ -104,7 +108,7 @@
                <p>
                   <b>Supports</b><br>
                   &#10148 Windows<br><br>
-                  
+
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
@@ -122,6 +126,41 @@
                   <b>Supports</b><br>
                   &#10148 Windows<br>
                   &#10148 Linux<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling systemZombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 5 -->
+         <article class="post_content">
+            <h2>Voxel World</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 5 -->
+         <article class="post_content">
+            <h2>RTS control test</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Android<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -153,7 +192,11 @@
                <video controls preload="metadata">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
-               <p>Zombie Masacre is made in unity3d with the help of
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Web<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
          </article>
@@ -166,7 +209,12 @@
                <video controls preload="metadata">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
-               <p>Zombie Masacre is made in unity3d with the help of
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br>
+                  &#10148 Linux<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
          </article>
@@ -179,7 +227,11 @@
                <video controls preload="metadata">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
-               <p>Zombie Masacre is made in unity3d with the help of
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Linux<br>
+                  &#10148 Web<br><br>
+                  Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
          </article>
@@ -192,20 +244,45 @@
                <video controls preload="metadata">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
-               <p>Zombie Masacre is made in unity3d with the help of
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
          </article>
 
          <!-- pos 9 -->
          <article class="post_content">
-            <h2>Mario clone</h2>
+            <h2>Pacman Clone</h2>
 
             <div>
                <video controls preload="metadata">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
-               <p>Zombie Masacre is made in unity3d with the help of
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
+               my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
+            </div>
+         </article>
+
+         <!-- pos 10 -->
+         <article class="post_content">
+            <h2>Auto cleanner</h2>
+
+            <div>
+               <video controls preload="metadata">
+                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+               </video>
+               <p>
+                  <b>Supports</b><br>
+                  &#10148 Windows<br><br>
+
+                  Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
          </article>
