more css fixes and added a link to the coin flipper game

--- a/Projects.html
+++ b/Projects.html
@@ -231,6 +231,10 @@
                   <b>Supports</b><br>
                   &#10148 Linux<br>
                   &#10148 Web<br><br>
+                  <a href="https://xenose.itch.io/school-project-coin-flipper">
+                  &#10148 Play Online!</a>
+                  <br><br>
+
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
