change video format for astroid wars

--- a/Projects.html
+++ b/Projects.html
@@ -28,7 +28,7 @@
 
             <div>
                <video poster="img/astroid_wars.png" controls preload="metadata">
-                  <source src="videos/astroid_wars.webm" type="video/webm">
+                  <source src="videos/astroid_wars.mp4" type="video/webm">
                </video>
                <p>
                   <b>Supports</b><br>
@@ -50,7 +50,7 @@
 
             <div>
                <video controls preload="metadata">
-                  <source src="videos/astroid_wars.webm" type="video/webm">
+                  <source src="videos/astroid_wars.mp4" type="video/webm">
                </video>
                <p>
                   <b>Supports</b><br>
@@ -68,7 +68,7 @@
 
             <div>
                <video controls preload="metadata">
-                  <source src="videos/astroid_wars.webm" type="video/webm">
+                  <source src="videos/astroid_wars.mp4" type="video/webm">
                </video>
                <p>
                   <b>Supports</b><br>
