more video css fixes

--- a/Projects.html
+++ b/Projects.html
@@ -280,7 +280,7 @@
 
             <div>
                <video controls preload="metadata">
-                  <source src="videos/zombie_masacre.mp4" type="video/mp4">
+                  <source src="videos/AutoCleaner.mp4" type="video/mp4">
                </video>
                <p>
                   <b>Supports</b><br>
