removed no existing javascript

--- a/Projects.html
+++ b/Projects.html
@@ -12,7 +12,7 @@
       <script src="Posts.js"></script>
    </head>
 
-   <body onload="GenMenu(); GenratePosts('test')">
+   <body onload="GenMenu()">
 
       <div id="title_bar">
             <h1>Projects</h1>
@@ -32,8 +32,8 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br>
-                  &#10148 Linux<br><br>
+                  &#10148Windows<br>
+                  &#10148Linux<br><br>
 
                   this project was mayed in a day with c++ and sfml, 
                demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
@@ -54,8 +54,8 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br>
-                  &#10148 Linux<br><br>
+                  &#10148Windows<br>
+                  &#10148Linux<br><br>
 
                   this project was mayed in a day with c++ and sfml, 
                demonstating the<br>spreated axums threum</p>
@@ -72,7 +72,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br><br>
+                  &#10148Windows<br><br>
 
                   this project was mayed in a day with c++ and sfml, 
                demonstating the<br>spreated axums threum</p>
@@ -89,8 +89,8 @@
                </video>
                <p>
                   <b>Supported</b><br>
-                  &#10148 Windows<br>
-                  &#10148 Android<br><br>
+                  &#10148Windows<br>
+                  &#10148Android<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -107,7 +107,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br><br>
+                  &#10148Windows<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -124,8 +124,8 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br>
-                  &#10148 Linux<br><br>
+                  &#10148Windows<br>
+                  &#10148Linux<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling systemZombie Masacre is made in unity3d with the help of
@@ -143,7 +143,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br><br>
+                  &#10148Windows<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -160,7 +160,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Android<br><br>
+                  &#10148Android<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -177,7 +177,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br><br>
+                  &#10148Windows<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -194,7 +194,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Web<br><br>
+                  &#10148Web<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -211,8 +211,8 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br>
-                  &#10148 Linux<br><br>
+                  &#10148Windows<br>
+                  &#10148Linux<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -229,10 +229,10 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Linux<br>
-                  &#10148 Web<br><br>
+                  &#10148Linux<br>
+                  &#10148Web<br><br>
                   <a href="https://xenose.itch.io/school-project-coin-flipper">
-                  &#10148 Play Online!</a>
+                  &#10148Play Online!</a>
                   <br><br>
 
                   Zombie Masacre is made in unity3d with the help of
@@ -250,7 +250,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br><br>
+                  &#10148Windows<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -267,7 +267,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br><br>
+                  &#10148Windows<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
@@ -284,7 +284,7 @@
                </video>
                <p>
                   <b>Supports</b><br>
-                  &#10148 Windows<br><br>
+                  &#10148Windows<br><br>
 
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
