--- a/Projects.html
+++ b/Projects.html
@@ -27,11 +27,11 @@
             <h2>Astroid Wars "アストロイド"</h2>
 
             <div>
-               <video poster="img/astroid_wars.png" controls preload="metadata">
+               <video poster="img/astroid_wars.png" controls preload="none">
                   <source src="videos/astroid_wars.mp4" type="video/webm">
                </video>
                <p>
-                  <b>Supports</b><br>
+                  <b>Supports</b><br>                  
                   &#10148Windows<br>
                   &#10148Linux<br><br>
 
@@ -49,7 +49,7 @@
             <h2>OpenGL 3D demo "アストロイド"</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/astroid_wars.mp4" type="video/webm">
                </video>
                <p>
@@ -67,7 +67,7 @@
             <h2>OpenGL 3D box rendering</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/astroid_wars.mp4" type="video/webm">
                </video>
                <p>
@@ -84,7 +84,7 @@
             <h2>Zombie Mascar</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -102,7 +102,7 @@
             <h2>Bomb Game</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -119,7 +119,7 @@
             <h2>Change Runner 3D</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/changer_runner_3D.mp4" type="video/mp4">
                </video>
                <p>
@@ -138,7 +138,7 @@
             <h2>Voxel World</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -155,7 +155,7 @@
             <h2>RTS control test</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -172,7 +172,7 @@
             <h2>Change Runner 2D</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -189,7 +189,7 @@
             <h2>High school second year webpage</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -206,7 +206,7 @@
             <h2>Mappy</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -224,7 +224,7 @@
             <h2>Coin Flipper</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -245,7 +245,7 @@
             <h2>Mario clone</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -262,7 +262,7 @@
             <h2>Pacman Clone</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/zombie_masacre.mp4" type="video/mp4">
                </video>
                <p>
@@ -279,7 +279,7 @@
             <h2>Auto cleanner</h2>
 
             <div>
-               <video controls preload="metadata">
+               <video controls preload="none">
                   <source src="videos/AutoCleaner.mp4" type="video/mp4">
                </video>
                <p>
