uploading new files

--- a/Projects.html
+++ b/Projects.html
@@ -49,8 +49,8 @@
             <h2>OpenGL 3D demo "アストロイド"</h2>
 
             <div>
-               <video controls preload="none">
-                  <source src="videos/astroid_wars.mp4" type="video/webm">
+               <video poster="img/opengl_test.png" controls preload="none">
+                  <source  src="videos/OpenGLTest.mp4" type="video/webm">
                </video>
                <p>
                   <b>Supports</b><br>
