added some real text

--- a/Projects.html
+++ b/Projects.html
@@ -31,16 +31,10 @@
                   <source src="videos/astroid_wars.mp4" type="video/webm">
                </video>
                <p>
-                  <b>Supports</b><br>                  
-                  &#10148Windows<br>
-                  &#10148Linux<br><br>
-
-                  this project was mayed in a day with c++ and sfml, 
-               demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
-               demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
-               demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
-               demonstating the spreated axums threumthis project was mayed in a day with c++ and sfml, 
-               demonstating the spreated axums threum</p>
+                  <b>Supports ・ プラットホーム </b><br>                  
+                  &#10148Windows ・ ウィンドウズ<br>
+                  &#10148Linux ・ リナックス<br><br>
+                  このアステロイドワォーは小惑星を誤魔化すのゲームです。コードの言語がC/C＋＋とSFMLライブライー。</p>
             </div>
          </article>
 
