--- a/Projects.html
+++ b/Projects.html
@@ -1,18 +1,27 @@
 <!DOCTYPE HTML>
 
-<html Lang="jp">
+<html Lang="ja">
    <head>
       <meta charset="UTF-8"> 
       <title>Projects</title>
+
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap"
+         rel="stylesheet"> 
+
       <link rel="stylesheet" type="text/css" href="Main.css">
       <link rel="stylesheet" type="text/css" href="Nav.css">   
       <link rel="stylesheet" type="text/css" href="Posts.css">
 
       <script src="Menu.js"></script>
       <script src="Posts.js"></script>
+      <script src="Background.js"></script>
    </head>
 
-   <body onload="GenMenu()">
+   <body onload="GenMenu(); LoadBackground()">
+
+      <canvas id="background_canvas" 
+              style="z-index: -1; top: 0; position: fixed;">
+      </canvas>
 
       <div id="title_bar"><h1>Projects</h1></div>
       <nav id="Menu"></nav>
@@ -21,7 +30,7 @@
 
       <script>
          CreatePost("astroid_wars", "Astroid Wars アストロイ・ワォー",
-            "<b>Supports ・ プラットホーム</b><br>&#10148;Windows ・ ウィンドウズ<br>\
+            "<b>Supports・プラットホーム</b><br>&#10148;Windows・ウィンドウズ<br>\
             &#10148;Linux ・リナックス<br><br>\
             このアステロイド・ワォーは小惑星を誤魔化すのゲームです。\
             コードの言語がC/C＋＋とSFMLライブライー。");
