--- a/Projects.html
+++ b/Projects.html
@@ -17,7 +17,7 @@
       <script src="Background.js"></script>
    </head>
 
-   <body onload="GenMenu(); LoadBackground()">
+   <body onload="GenMenu(true); LoadBackground()">
 
       <canvas id="background_canvas" 
               style="z-index: -1; top: 0; position: fixed;">
