more css for home menu

--- a/Index.html
+++ b/Index.html
@@ -31,5 +31,9 @@
          <p>hello world</p>
       </main>
    
+      <footer>
+         <p> All the materials was create by sebastian johansson @2020. 
+         all rights reserverd<p>
+      </footer>
    </body>
 </html>
