--- a/Index.html
+++ b/Index.html
@@ -21,14 +21,15 @@
               style="z-index: -1; top: 0; position: fixed;">
       </canvas>
 
-      <div id="title_bar">
-         <h1>Home</h1>
-      </div>
 
       <nav id="Menu"></nav>
       <main>
-         <h1>test test</h1>
-         <p>hello world</p>
+         <div id="title_bar">
+            <h1>Home</h1>
+         </div>
+
+         <h2>よこそう</h2>
+         <p>僕の名前はセバスティアン・ヨハンソン。</p>
       </main>
    
       <footer>
