--- a/Mods.html
+++ b/Mods.html
@@ -3,7 +3,12 @@
 <html>
    <head>
       
+      <meta charset="UTF-8"> 
       <title>Mods</title>
+
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap"
+         rel="stylesheet">
+
       <link rel="stylesheet" type="text/css" href="Main.css">
       <link rel="stylesheet" type="text/css" href="Nav.css">   
       <link rel="stylesheet" type="text/css" href="Posts.css">
@@ -12,7 +17,7 @@
       <script src="Posts.js"></script>
    </head>
 
-   <body onload="GenMenu();">
+   <body onload="GenMenu(true);">
 
       <div id="title_bar"><h1>Projects</h1></div>
 
