--- a/Projects.html
+++ b/Projects.html
@@ -29,7 +29,9 @@
 
 
       <script>
-         CreatePost("astroid_wars", "Astroid Wars アストロイ・ワォー",
+         CreatePost(
+            "astroid_wars", 
+            "Astroid Wars アストロイ・ワォー",
             "<b>Supports・プラットホーム</b><br>&#10148;Windows・ウィンドウズ<br>\
             &#10148;Linux ・リナックス<br><br>\
             このアステロイド・ワォーは小惑星を誤魔化すのゲームです。\
@@ -40,10 +42,10 @@
          CreatePost("opengl_3D_box_demo", "OpenGL 3D box rendering", "");
          CreatePost("zombie_masacre", "Zombie Masacre", "");
          CreatePost("bomb_game", "Bomb Game", "");
-         CreatePost("change_runner3D", "Change Runner 3D", "");
+         CreatePost("change_runner_3D", "Change Runner 3D", "");
          CreatePost("voxel_world", "Voxel World", "");
          CreatePost("rts_control", "Rts control test", "");;
-         CreatePost("change_runner2D", "Change Runner 2D", "");
+         CreatePost("change_runner_2D", "Change Runner 2D", "");
          CreatePost("webpage_highschool", "Old Highschool webpage", "");
          CreatePost("mappy", "Mappy", "");
          CreatePost("coin_flipper", "Coin Flipper", "");
