--- a/Projects.html
+++ b/Projects.html
@@ -57,7 +57,7 @@
          </article>
 
          <!-- pos 2 -->
-         <article class="post_content">
+         <!--<article class="post_content">
             <h2>OpenGL 3D box rendering</h2>
 
             <div>
@@ -71,7 +71,7 @@
                   this project was mayed in a day with c++ and sfml, 
                demonstating the<br>spreated axums threum</p>
             </div>
-         </article>
+            </article> -->
 
          <!-- pos 3 -->
          <article class="post_content">
@@ -92,7 +92,7 @@
          </article>
 
          <!-- pos 3 -->
-         <article class="post_content">
+         <!-- <article class="post_content">
             <h2>Bomb Game</h2>
 
             <div>
@@ -106,7 +106,7 @@
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
-         </article>
+         </article> -->
 
          <!-- pos 4 -->
          <article class="post_content">
@@ -127,7 +127,7 @@
             </div>
          </article>
 
-         <!-- pos 5 -->
+         <!-- 
          <article class="post_content">
             <h2>Voxel World</h2>
 
@@ -144,7 +144,6 @@
             </div>
          </article>
 
-         <!-- pos 5 -->
          <article class="post_content">
             <h2>RTS control test</h2>
 
@@ -161,7 +160,6 @@
             </div>
          </article>
 
-         <!-- pos 5 -->
          <article class="post_content">
             <h2>Change Runner 2D</h2>
 
@@ -178,7 +176,6 @@
             </div>
          </article>
 
-         <!-- pos 5 -->
          <article class="post_content">
             <h2>High school second year webpage</h2>
 
@@ -195,7 +192,6 @@
             </div>
          </article>
 
-         <!-- pos 6 -->
          <article class="post_content">
             <h2>Mappy</h2>
 
@@ -211,7 +207,7 @@
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
-         </article>
+         </article> -->
 
          <!-- pos 7 -->
          <article class="post_content">
@@ -234,7 +230,7 @@
             </div>
          </article>
 
-         <!-- pos 8 -->
+         <!-- 
          <article class="post_content">
             <h2>Mario clone</h2>
 
@@ -251,7 +247,7 @@
             </div>
          </article>
 
-         <!-- pos 9 -->
+         
          <article class="post_content">
             <h2>Pacman Clone</h2>
 
@@ -266,7 +262,7 @@
                   Zombie Masacre is made in unity3d with the help of
                my class mates back in 2015, Me personaly implemented the menu<br> and the leveling system</p>
             </div>
-         </article>
+         </article> -->
 
          <!-- pos 10 -->
          <article class="post_content">
