--- a/About.html
+++ b/About.html
@@ -1,15 +1,20 @@
 <!DOCTYPE HTML>
 
-<html>
+<html Lang="ja">
    <head>
+      <meta charset="UTF-8"> 
       <title>About Me</title>
+
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap"
+         rel="stylesheet">
+      
       <link rel="stylesheet" type="text/css" href="Main.css">
       <link rel="stylesheet" type="text/css" href="Nav.css">
 
       <script src="Menu.js"></script>
    </head>
 
-   <body onload="GenMenu()">
+   <body onload="GenMenu(true)">
 
       <div id="title_bar">
          <h1>About Me</h1>
