--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,11 @@
 <html Lang="ja">
    <head>
       <meta charset="UTF-8"> 
-      <title>Projects</title>
+      <title>Contact</title>
+      
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap"
+         rel="stylesheet">
+
       <link rel="stylesheet" type="text/css" href="Main.css">
       <link rel="stylesheet" type="text/css" href="Nav.css">   
       <link rel="stylesheet" type="text/css" href="Posts.css">
@@ -11,13 +15,15 @@
       <script src="Menu.js"></script>
    </head>
 
-   <body onload="GenMenu()">
+   <body onload="GenMenu(true)">
 
-      <div id="title_bar"><h1>Projects</h1></div>
+      <div id="title_bar"><h1>Contact</h1></div>
       <nav id="Menu"></nav>
 
       <main id="main_content">
-         <textarea></textarea>
+         <p style="margin-left: 15px;">E-Mail</p>
+         <input type="text" style="width:40%; margin-left: 15px;" name="email" value="you@Email.com">
+         <textarea required rows=10 style="width:80%; margin-left: 15px;"></textarea>
       </main>
       
       <footer>
