--- a/Contact.html
+++ b/Contact.html
@@ -22,8 +22,9 @@
 
       <main id="main_content">
          <p style="margin-left: 15px;">E-Mail</p>
-         <input type="text" style="width:40%; margin-left: 15px;" name="email" value="you@Email.com">
-         <textarea required rows=10 style="width:80%; margin-left: 15px;"></textarea>
+         <input type="text" style="width:40%; margin-left: 15px; margin-bottom: 10px;" name="email" value="you@Email.com">
+         <textarea required rows=10 style="width:80%; margin-left: 20px;"></textarea>
+         <input type="submit" value="Send">
       </main>
       
       <footer>
