--- a/About.html
+++ b/About.html
@@ -17,8 +17,7 @@
 
    <body onload="GenMenu(true); LoadBackground();">
 
-      <canvas id="background_canvas" 
-              style="z-index: -1; top: 0; position: fixed;">
+      <canvas id="background_canvas" style="z-index: -1; top: 0; position: fixed;">
       </canvas>
 
       <div id="title_bar">
