--- a/Contact.html
+++ b/Contact.html
@@ -18,8 +18,7 @@
 
    <body onload="GenMenu(true); LoadBackground();">
 
-      <canvas id="background_canvas" 
-              style="z-index: -1; top: 0; position: fixed;">
+      <canvas id="background_canvas" style="z-index: -1; top: 0; position: fixed;">
       </canvas>
       
       <div id="title_bar"><h1>Contact</h1></div>
