--- a/Projects.html
+++ b/Projects.html
@@ -34,23 +34,34 @@
             "Astroid Wars アストロイ・ワォー",
             "<b>Supports・プラットホーム</b><br>&#10148;Windows・ウィンドウズ<br>\
             &#10148;Linux ・リナックス<br><br>\
-            このアステロイド・ワォーは小惑星を誤魔化すのゲームです。\
-            コードの言語がC/C＋＋とSFMLライブライー。");
+            アストロイドウォーズは、昔のアーケードゲームに似ています。\
+宇宙を漂う小惑星にぶつからないように動きながら撃って破壊し、全滅を目指します。\
+小惑星に当たるごとにhpが下がり、hp０になるとゲームオーバーです。");
          
          CreatePost("opengl_3D_demo", "OpenGL 3D Demo", 
-            "");
-         CreatePost("opengl_3D_box_demo", "OpenGL 3D box rendering", "");
-         CreatePost("zombie_masacre", "Zombie Masacre", "");
-         CreatePost("bomb_game", "Bomb Game", "");
-         CreatePost("change_runner_3D", "Change Runner 3D", "");
-         CreatePost("voxel_world", "Voxel World", "");
-         CreatePost("rts_control", "Rts control test", "");;
+            "<b>Supports・プラットホーム</b><br>&#10148;Windows・ウィンドウズ<br>\
+            &#10148;Linux ・リナックス<br><br>これはopenglのパフォーマンスデモンストレーションです。\
+データはコンソールを出します。");
+
+         //CreatePost("opengl_3D_box_demo", "OpenGL 3D box rendering", "");
+         CreatePost("zombie_masacre", "Zombie Masacre", "<b>Supports・プラットホーム</b><br>&#10148;Windows・ウィンドウズ<br>\
+            &#10148;Linux ・リナックス<br><br>これは高校時代にチームで作成しました。\
+このゲームはツインスティックシューターを使用します。\
+生き残るために襲いかかるゾンビと戦うゲームです");
+         //CreatePost("bomb_game", "Bomb Game", "");
+         CreatePost("change_runner_3D", "Change Runner 3D", "<b>Supports・プラットホーム</b><br>&#10148;Windows・ウィンドウズ<br>\
+            &#10148;Linux ・リナックス<br><br>\
+これは、2Dを元に作成した3Dゲームです。\
+次々に流れてくる形に、同じ形を合わせポイントを稼いでいきます。\
+間に一つだけ出てくる形を取ると、さらにポイントが上がり、その後合わせる形が変わります。");
+         //CreatePost("voxel_world", "Voxel World", "");
+         //CreatePost("rts_control", "Rts control test", "");;
          CreatePost("change_runner_2D", "Change Runner 2D", "");
-         CreatePost("webpage_highschool", "Old Highschool webpage", "");
-         CreatePost("mappy", "Mappy", "");
-         CreatePost("coin_flipper", "Coin Flipper", "");
-         CreatePost("mario_clone", "Mario Clone", "");
-         CreatePost("pacman_clone", "Pacman Clone", "");
+         //CreatePost("webpage_highschool", "Old Highschool webpage", "");
+         CreatePost("mappy", "Mappy", "<b>Supports・プラットホーム</b><br>&#10148;Windows・ウィンドウズ<br><br>これは日本の昔のゲーム”マッピー”のクローンです。");
+         //CreatePost("coin_flipper", "Coin Flipper", "");
+         //CreatePost("mario_clone", "Mario Clone", "");
+         //CreatePost("pacman_clone", "Pacman Clone", "");
          CreatePost("auto_cleaner", "Auto Cleaneer", "");
       </script>
 
