modified:   index.html 	modified:   main.css 	modified:   menu.css 	modified:   menu.js

--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
             <h1>Projects</h1>
             
             <article>
-               <h2>Test</h2>
+               <h2>Astroid Wars</h2>
                
                <div class="head">
                   <img src="img/test.png">
                   <ul>
-                     <li> Platforms : Linux Windows Mac</li>
-                     <li> Year      : 1995</li>
-                     <li> Complier  : clang</li>
+                     <li> Platforms ： Linux Windows</li>
+                     <li> 年  ： 2019</li>
+                     <li> Complier  ： clang</li>
+                     <li> 言語   ：C++</li>
                   </ul>
                </div>
 
