modified:   index.html 	modified:   main.css

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                   <li><img src='https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/user.svg'/></li>
                   <li>Team</li>
                   <li>No Source</li>
+                  <li>Other</li>
                </ul>
             </nav>
 
