modified:   index.html 	modified:   main.css

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         <li> Platforms ： Linux Windows</li>
                         <li> 年  ： 2019</li>
                         <li> Complier  ： clang</li>
-                        <li> 言語 ：C++</li>
-                        <li> Librery : SFML</li>
+                        <li> 言語 ：C</li>
+                        <li> Librery : GLEW GLFW3</li>
                         <li> Threads : 2</li>
                      </ul>
                   </div>
