--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <nav id="ProjectTabs">
                <ul>
-                  <li><img src='https://raw.githubusercontent.com/feathericons/feather/8263ca93c4b338dcfafed62321c27a88368ba7cc/icons/user.svg'/></li>
+                  <li>Self</li>
                   <li>Team</li>
                   <li>No Source</li>
                   <li>Other</li>
